--- a/styles/style.css
+++ b/styles/style.css
@@ -5,12 +5,25 @@ html {
   color: #FFFFFF;
   text-align: justify;
 }
+
 h1 {
   font-size: 40px;
-  border: 5px solid #FFFFFF;
+  text-align: center;
+  padding: 10px;
+  border: 5px solid  #FFFFFF;
 }
+
 body {
   width: 1000px;
   margin: 0 auto;
   padding: 10px 80px 80px 80px;
+}
+
+button {
+  border: none;
+  background-color: #FFFFFF
+}
+
+button:hover{
+  background-color: #CCCCCC
 }
